--- a/css/myport.css
+++ b/css/myport.css
@@ -56,12 +56,13 @@
 }
 .port-title {
   margin-top: -30px;
-  width: 300px;
+  max-width: 450px;
+  font-size: 20px;
 }
 /* Image */
 .portfolio-card img {
   width: 100%;
-  height: 320px;
+  height: 400px;
   object-fit: cover;
   object-position: center;
   border-radius: 12px;
@@ -119,5 +120,40 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+}
+
+/* --------------------------------------- */
+.portfolio-card {
+  max-width: 1000px;
+  box-sizing: border-box;
+}
+
+.portfolio-cards {
+  width: 100%;
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 24px;
+}
+
+@media (max-width: 768px) {
+  .portfolio-cards {
+    grid-template-columns: none;
+  }
+  .portfolio-cards .card-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .portfolio-cards .card-footer p {
+    width: 100%;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+  }
+  .see-project-btn {
+    flex-shrink: 0;
   }
 }
